Main menu update
Update on the main menu

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -169,7 +169,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Main_Menu
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -178,11 +178,12 @@ LastLevel=/Game/Maps/Menu
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Maps/Menu.Menu:PersistentLevel.Menu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Main_Menu/Camera_MainMenu
-MRUItem1=/Game/Blueprints/Main_Menu/WB_MainMenu
-MRUItem2=/Game/Maps/Menu
+MRUItem0=/Game/Maps/Menu
+MRUItem1=/Game/Blueprints/Main_Menu/Camera_MainMenu
+MRUItem2=/Game/Blueprints/Main_Menu/WB_MainMenu
 MRUItem3=/Game/Maps/Alley
 MRUItem4=/Game/Assets/3D/Char/raccoon_Skeleton
 MRUItem5=/Game/Assets/3D/Char/raccoon
@@ -678,7 +679,7 @@ LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1284.000 Y=724.000
+WindowSize=X=1285.600 Y=725.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -695,7 +696,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=H:/Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
+UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
