--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -25,7 +25,7 @@ PreviewDeviceProfileName=None
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowWidth=1910
-NewWindowHeight=1006
+NewWindowHeight=1022
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -146,6 +146,7 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
 [ContentBrowser]
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -169,7 +170,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -178,12 +179,12 @@ LastLevel=/Game/Maps/Menu
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Maps/Menu.Menu:PersistentLevel.Menu
+OpenAssetsAtExit=/Game/Blueprints/Main_Menu/WB_MainMenu.WB_MainMenu
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Maps/Menu
-MRUItem1=/Game/Blueprints/Main_Menu/Camera_MainMenu
-MRUItem2=/Game/Blueprints/Main_Menu/WB_MainMenu
+MRUItem1=/Game/Blueprints/Main_Menu/WB_MainMenu
+MRUItem2=/Game/Blueprints/Main_Menu/Camera_MainMenu
 MRUItem3=/Game/Maps/Alley
 MRUItem4=/Game/Assets/3D/Char/raccoon_Skeleton
 MRUItem5=/Game/Assets/3D/Char/raccoon
@@ -527,6 +528,22 @@ K2Node_VariableGet.Events=True
 K2Node_CustomEvent.GraphNodeDetail=True
 K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
+Spacer.Layout=True
+Spacer.Appearance=True
+Spacer.Accessibility=True
+Spacer.Behavior=True
+Spacer.Render Transform=True
+Spacer.Performance=True
+Spacer.Clipping=True
+Spacer.Navigation=True
+Spacer.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -628,23 +645,25 @@ FrameNumberDisplayFormat=Seconds
 
 [DetailPropertyExpansion]
 Image="\"Object.Appearance.ColorAndOpacity\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" "
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Object=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
-ContentWidget="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-PanelWidget=
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_MainMenu_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 Texture2D="\"Object.Texture.PaddingColor\" \"Object.Adjustments.ChromaKeyColor\" "
 Texture="\"Object.Texture.PaddingColor\" \"Object.Adjustments.ChromaKeyColor\" "
 StreamableRenderAsset=
 SizeBox="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-VerticalBox=
+VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 SpotLight="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
 Light="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
+Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Main_Menu/Camera_MainMenu.Camera_MainMenu;
@@ -679,7 +698,7 @@ LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1285.600 Y=725.600
+WindowSize=X=1287.200 Y=727.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -700,7 +719,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=H:/Unreal/PuzzleRaccoon/Blender/raccoon.fbx
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Photoshop/Final Renders/Button_Exit.png
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=../../../../../Unreal/Raccoozle/Content/
 GenericSave=../../../../../Unreal/Raccoozle/Content/
