--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,11 +128,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Maps/Menu
+MRUItem0=/Game/Maps/Park
 MRUItem1=/Game/Maps/LevelSelection
-MRUItem2=/Game/Maps/Alley
-MRUItem3=/Game/ThirdPersonBP/Menu
-MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/Maps/Menu
+MRUItem3=/Game/Maps/Alley
+MRUItem4=/Game/ThirdPersonBP/Menu
+MRUItem5=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -170,7 +171,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Main_Menu
+ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/Park/Import
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -200,32 +201,32 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/Menu
+LastLevel=/Game/Maps/Park
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Main_Menu/LSA_RaccoonMenu
-MRUItem1=/Game/Blueprints/Main_Menu/NA_RaccoonMenu
-MRUItem2=/Game/Blueprints/Main_Menu/Animation_RaccoonMenu
-MRUItem3=/Game/Blueprints/Main_Menu/NewAnimationtest
-MRUItem4=/Game/Assets/3D/Char/raccoon_Skeleton
-MRUItem5=/Game/Assets/3D/Char/raccoon
-MRUItem6=/Game/Blueprints/Main_Menu/test
-MRUItem7=/Game/Blueprints/Main_Menu/AB_RaccoonMenu
-MRUItem8=/Game/Blueprints/Main_Menu/LSA_Raccoon
-MRUItem9=/Game/Blueprints/Main_Menu/LSA_SpotLight
-MRUItem10=/Game/Blueprints/Main_Menu/Camera_MainMenu
-MRUItem11=/Game/Maps/Menu
-MRUItem12=/Game/Maps/LevelSelection
-MRUItem13=/Game/Blueprints/Level_Select/WB_LevelSelect
-MRUItem14=/Game/Blueprints/Main_Menu/WB_MainMenu
-MRUItem15=/Game/Maps/Alley
-MRUItem16=/Game/Assets/2D/Start
-MRUItem17=/Game/Blueprints/ThirdPersonOverview
-MRUItem18=/Game/ThirdPersonBP/BP_Menu
-MRUItem19=/Game/ThirdPersonBP/BP_Level
+MRUItem0=/Game/Maps/Park
+MRUItem1=/Game/Maps/LevelSelection
+MRUItem2=/Game/Blueprints/Main_Menu/LSA_RaccoonMenu
+MRUItem3=/Game/Blueprints/Main_Menu/NA_RaccoonMenu
+MRUItem4=/Game/Blueprints/Main_Menu/Animation_RaccoonMenu
+MRUItem5=/Game/Blueprints/Main_Menu/NewAnimationtest
+MRUItem6=/Game/Assets/3D/Char/raccoon_Skeleton
+MRUItem7=/Game/Assets/3D/Char/raccoon
+MRUItem8=/Game/Blueprints/Main_Menu/test
+MRUItem9=/Game/Blueprints/Main_Menu/AB_RaccoonMenu
+MRUItem10=/Game/Blueprints/Main_Menu/LSA_Raccoon
+MRUItem11=/Game/Blueprints/Main_Menu/LSA_SpotLight
+MRUItem12=/Game/Blueprints/Main_Menu/Camera_MainMenu
+MRUItem13=/Game/Maps/Menu
+MRUItem14=/Game/Blueprints/Level_Select/WB_LevelSelect
+MRUItem15=/Game/Blueprints/Main_Menu/WB_MainMenu
+MRUItem16=/Game/Maps/Alley
+MRUItem17=/Game/Assets/2D/Start
+MRUItem18=/Game/Blueprints/ThirdPersonOverview
+MRUItem19=/Game/ThirdPersonBP/BP_Menu
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -483,25 +484,25 @@ Character.Input=True
 Character.Actor=True
 Character.Materials=True
 SkeletalMeshActor.TransformCommon=True
-SkeletalMeshActor.Animation=True
-SkeletalMeshActor.Mesh=True
-SkeletalMeshActor.Materials=True
-SkeletalMeshActor.Clothing=True
-SkeletalMeshActor.Physics=True
-SkeletalMeshActor.Collision=True
-SkeletalMeshActor.MasterPoseComponent=True
-SkeletalMeshActor.Lighting=True
-SkeletalMeshActor.ClothingSimulation=True
-SkeletalMeshActor.Rendering=True
-SkeletalMeshActor.SkinWeights=True
-SkeletalMeshActor.Navigation=True
-SkeletalMeshActor.VirtualTexture=True
-SkeletalMeshActor.Tags=True
-SkeletalMeshActor.Activation=True
-SkeletalMeshActor.Cooking=True
-SkeletalMeshActor.Replication=True
-SkeletalMeshActor.Input=True
-SkeletalMeshActor.Actor=True
+SkeletalMeshActor.Animation=False
+SkeletalMeshActor.Mesh=False
+SkeletalMeshActor.Materials=False
+SkeletalMeshActor.Clothing=False
+SkeletalMeshActor.Physics=False
+SkeletalMeshActor.Collision=False
+SkeletalMeshActor.MasterPoseComponent=False
+SkeletalMeshActor.Lighting=False
+SkeletalMeshActor.ClothingSimulation=False
+SkeletalMeshActor.Rendering=False
+SkeletalMeshActor.SkinWeights=False
+SkeletalMeshActor.Navigation=False
+SkeletalMeshActor.VirtualTexture=False
+SkeletalMeshActor.Tags=False
+SkeletalMeshActor.Activation=False
+SkeletalMeshActor.Cooking=False
+SkeletalMeshActor.Replication=False
+SkeletalMeshActor.Input=False
+SkeletalMeshActor.Actor=False
 SkeletalMesh.Material Slots=True
 SkeletalMesh.LODCustomMode=True
 SkeletalMesh.LOD0=True
@@ -641,6 +642,43 @@ AnimSequence.File Path=True
 AnimSequence.CustomAttributes=True
 AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
+SkyLightComponent.TransformCommon=True
+SkyLightComponent.Light=True
+SkyLightComponent.DistanceFieldAmbientOcclusion=True
+SkyLightComponent.AtmosphereAndCloud=True
+SkyLightComponent.RayTracing=True
+SkyLightComponent.Rendering=True
+SkyLightComponent.Tags=True
+SkyLightComponent.Cooking=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Sun=True
+AtmosphericFog.Ground=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Activation=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.Actor=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -744,7 +782,7 @@ FrameNumberDisplayFormat=Seconds
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.SkeletalMeshes\" "
+Object=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -758,26 +796,36 @@ VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" 
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 SpotLight="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
-Light="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
+Light=
 Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
+Info=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree2.Park_assets_Tree2;
+RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree1.Park_assets_Tree1;
 RecentlyPlaced=/Game/Assets/3D/Char/raccoon_Skeleton.raccoon_Skeleton;
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/Assets/BP_Sky_Sphere.BP_Sky_Sphere;
+RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Ground_Grass_D.T_Ground_Grass_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_ground_Moss_D.T_ground_Moss_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_ground_Moss_Mat.T_ground_Moss_Mat;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Bush_Mat.T_Bush_Mat;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Ground_Grass_Mat.T_Ground_Grass_Mat;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Bush_D.T_Bush_D;
+RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtmosphere_0
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Assets/3D/Park/Import/maya_test.maya_test;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Game/Blueprints/Main_Menu/Camera_MainMenu.Camera_MainMenu;
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
-RecentlyPlaced=/Game/Assets/3D/Char/raccoon.raccoon;
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
-RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtmosphere_0
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -798,7 +846,7 @@ LastLogListing=BlueprintLog
 
 [RootWindow]
 ScreenPosition=X=109.600 Y=396.800
-WindowSize=X=1288.800 Y=728.800
+WindowSize=X=1290.400 Y=730.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
