--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,8 +129,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/Maps/Park
-MRUItem1=/Game/Maps/LevelSelection
-MRUItem2=/Game/Maps/Menu
+MRUItem1=/Game/Maps/Menu
+MRUItem2=/Game/Maps/LevelSelection
 MRUItem3=/Game/Maps/Alley
 MRUItem4=/Game/ThirdPersonBP/Menu
 MRUItem5=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -171,7 +171,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/Park/Import
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -205,22 +205,23 @@ LastLevel=/Game/Maps/Park
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Maps/Park.Park:PersistentLevel.Park
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Maps/Park
-MRUItem1=/Game/Maps/LevelSelection
-MRUItem2=/Game/Blueprints/Main_Menu/LSA_RaccoonMenu
-MRUItem3=/Game/Blueprints/Main_Menu/NA_RaccoonMenu
-MRUItem4=/Game/Blueprints/Main_Menu/Animation_RaccoonMenu
-MRUItem5=/Game/Blueprints/Main_Menu/NewAnimationtest
-MRUItem6=/Game/Assets/3D/Char/raccoon_Skeleton
-MRUItem7=/Game/Assets/3D/Char/raccoon
-MRUItem8=/Game/Blueprints/Main_Menu/test
-MRUItem9=/Game/Blueprints/Main_Menu/AB_RaccoonMenu
-MRUItem10=/Game/Blueprints/Main_Menu/LSA_Raccoon
-MRUItem11=/Game/Blueprints/Main_Menu/LSA_SpotLight
-MRUItem12=/Game/Blueprints/Main_Menu/Camera_MainMenu
-MRUItem13=/Game/Maps/Menu
+MRUItem1=/Game/Maps/Menu
+MRUItem2=/Game/Maps/LevelSelection
+MRUItem3=/Game/Blueprints/Main_Menu/LSA_RaccoonMenu
+MRUItem4=/Game/Blueprints/Main_Menu/NA_RaccoonMenu
+MRUItem5=/Game/Blueprints/Main_Menu/Animation_RaccoonMenu
+MRUItem6=/Game/Blueprints/Main_Menu/NewAnimationtest
+MRUItem7=/Game/Assets/3D/Char/raccoon_Skeleton
+MRUItem8=/Game/Assets/3D/Char/raccoon
+MRUItem9=/Game/Blueprints/Main_Menu/test
+MRUItem10=/Game/Blueprints/Main_Menu/AB_RaccoonMenu
+MRUItem11=/Game/Blueprints/Main_Menu/LSA_Raccoon
+MRUItem12=/Game/Blueprints/Main_Menu/LSA_SpotLight
+MRUItem13=/Game/Blueprints/Main_Menu/Camera_MainMenu
 MRUItem14=/Game/Blueprints/Level_Select/WB_LevelSelect
 MRUItem15=/Game/Blueprints/Main_Menu/WB_MainMenu
 MRUItem16=/Game/Maps/Alley
@@ -484,12 +485,12 @@ Character.Input=True
 Character.Actor=True
 Character.Materials=True
 SkeletalMeshActor.TransformCommon=True
-SkeletalMeshActor.Animation=False
-SkeletalMeshActor.Mesh=False
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
 SkeletalMeshActor.Materials=False
 SkeletalMeshActor.Clothing=False
-SkeletalMeshActor.Physics=False
-SkeletalMeshActor.Collision=False
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Collision=True
 SkeletalMeshActor.MasterPoseComponent=False
 SkeletalMeshActor.Lighting=False
 SkeletalMeshActor.ClothingSimulation=False
@@ -679,6 +680,255 @@ BP_Sky_Sphere_C.Replication=True
 BP_Sky_Sphere_C.Collision=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AssetToolsSettings.Asset Tools=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.Blackboard=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AnimationSettings.CustomAttributes=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Mix=True
+AudioSettings.Quality=True
+ChaosSolverSettings.GameInstance=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CookerSettings.Editor=True
+CrowdManager.Config=True
+DebugCameraControllerSettings.General=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Timecode=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.DefaultClasses=True
+InputSettings.Console=True
+LandscapeSettings.Layers=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+RecastNavMesh.Collision=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.ChaosPhysics=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.VirtualTextures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.RayTracing=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererSettings.Skinning=True
+RendererSettings.PostProcessCalibrationMaterials=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+StreamingSettings.General=True
+StreamingSettings.Deprecated Settings=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+BlueprintEditorProjectSettings.Experimental=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+SkeletalMeshSimplificationSettings.General=True
+StructViewerProjectSettings.StructVisibilityManagement=True
+TextureImportSettings.VirtualTextures=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.App Bundles=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+AndroidRuntimeSettings.Misc=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.FileSystem=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.LaunchScreen=True
+IOSRuntimeSettings.Audio=True
+IOSRuntimeSettings.Misc=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Rendering=True
+MacTargetSettings.Packaging=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+MacTargetSettings.Audio=True
+LuminRuntimeSettings.Audio=True
+LuminRuntimeSettings.MPK Packaging=True
+LuminRuntimeSettings.Runtime=True
+LuminRuntimeSettings.Magic Leap App Tile=True
+LuminRuntimeSettings.Distribution Signing=True
+LuminRuntimeSettings.Build=True
+LuminRuntimeSettings.Advanced MPK Packaging=True
+LuminRuntimeSettings.AdvancedBuild=True
+LuminRuntimeSettings.Rendering=True
+MagicLeapSDKSettings.SDKConfig=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+GooglePADRuntimeSettings.Packaging=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+LevelSequenceEditorSettings.Playback=True
+MagicLeapSettings.General=True
+MagicLeapARPinSettings.ARPin=True
+NiagaraSettings.Niagara=True
+NiagaraSettings.Scalability=True
+NiagaraSettings.Renderer=True
+NiagaraEditorSettings.Niagara=True
+NiagaraEditorSettings.SimulationOptions=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+SteamVREditorSettings.SteamVR Input=True
+SteamVREditorSettings.SteamVR Editor Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Availability=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Camera=True
+CameraActor.PostProcess=True
+CameraActor.Lens=True
+CameraActor.Color Grading=True
+CameraActor.Rendering Features=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Collision=True
+CameraActor.Cooking=True
+CameraActor.Replication=True
+CameraActor.Actor=True
+CameraActor.Physics=False
+CameraActor.AssetUserData=False
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -803,6 +1053,7 @@ AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightC
 Info=
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree2.Park_assets_Tree2;
 RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree1.Park_assets_Tree1;
 RecentlyPlaced=/Game/Assets/3D/Char/raccoon_Skeleton.raccoon_Skeleton;
@@ -822,7 +1073,6 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Game/Assets/3D/Park/Import/maya_test.maya_test;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Game/Blueprints/Main_Menu/Camera_MainMenu.Camera_MainMenu;
-RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -843,10 +1093,11 @@ LastLogListing=FBXImport
 /Game/Blueprints/Level_Select/WB_LevelSelect.WB_LevelSelect=0
 /Game/Assets/3D/Char/raccoon.raccoon=0
 /Game/Blueprints/Main_Menu/NA_RaccoonMenu.NA_RaccoonMenu=0
+/Game/Maps/Park.Park:PersistentLevel.Park=1
 
 [RootWindow]
 ScreenPosition=X=109.600 Y=396.800
-WindowSize=X=1290.400 Y=730.400
+WindowSize=X=1293.600 Y=733.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -867,9 +1118,9 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Photoshop/Level Select/Button_Clicked.png
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Photoshop/Logo.png
 GenericExport=../../../../../Unreal/Raccoozle/Content/
-GenericOpen=../../../../../Unreal/Raccoozle/Content/
+GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
 MeshImportExport=../../../../../Unreal/Raccoozle/Content/
 WorldRoot=../../../../../Unreal/Raccoozle/Content/
@@ -1711,6 +1962,8 @@ PinnedCommandList.TimeStamp=2022.03.06-03.40.14
 PinnedCommandList.LastCompileMethod=External
 AnimationEditor.TimeStamp=2022.03.06-03.40.04
 AnimationEditor.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2022.03.06-03.40.09
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [DetailCategoriesAdvanced]
 Texture2D.Compression=False
@@ -1930,4 +2183,21 @@ bShowOutlinerInfoColumn=True
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[DetailCustomWidgetExpansion]
+SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,
+SceneComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+CameraActor=SkeletalMeshActor.Physics.ConstraintsGroup,
+
+[DetailMultiObjectNodeExpansion]
+CryptoKeysSettings=True
+ProjectPackagingSettings=True
+GeneralProjectSettings=True
+GameplayTagsSettings=True
+GameMapsSettings=True
+MoviePlayerSettings=True
+HardwareTargetingSettings=True
+EditorProjectAppearanceSettings=True
+BlueprintEditorProjectSettings=True
+WindowsTargetSettings=True
 
