--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -171,7 +171,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -205,29 +205,28 @@ LastLevel=/Game/Maps/Park
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Maps/Park.Park:PersistentLevel.Park
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Park
-MRUItem1=/Game/Maps/Menu
-MRUItem2=/Game/Maps/LevelSelection
-MRUItem3=/Game/Blueprints/Main_Menu/LSA_RaccoonMenu
-MRUItem4=/Game/Blueprints/Main_Menu/NA_RaccoonMenu
-MRUItem5=/Game/Blueprints/Main_Menu/Animation_RaccoonMenu
-MRUItem6=/Game/Blueprints/Main_Menu/NewAnimationtest
-MRUItem7=/Game/Assets/3D/Char/raccoon_Skeleton
-MRUItem8=/Game/Assets/3D/Char/raccoon
-MRUItem9=/Game/Blueprints/Main_Menu/test
-MRUItem10=/Game/Blueprints/Main_Menu/AB_RaccoonMenu
-MRUItem11=/Game/Blueprints/Main_Menu/LSA_Raccoon
-MRUItem12=/Game/Blueprints/Main_Menu/LSA_SpotLight
-MRUItem13=/Game/Blueprints/Main_Menu/Camera_MainMenu
-MRUItem14=/Game/Blueprints/Level_Select/WB_LevelSelect
-MRUItem15=/Game/Blueprints/Main_Menu/WB_MainMenu
-MRUItem16=/Game/Maps/Alley
-MRUItem17=/Game/Assets/2D/Start
-MRUItem18=/Game/Blueprints/ThirdPersonOverview
-MRUItem19=/Game/ThirdPersonBP/BP_Menu
+MRUItem0=/Game/Assets/3D/Park/Terrain
+MRUItem1=/Game/Assets/3D/Park/terrain2
+MRUItem2=/Game/Assets/3D/Park/Terrain1
+MRUItem3=/Game/Maps/Park
+MRUItem4=/Game/Assets/3D/Park/Grass
+MRUItem5=/Game/Assets/3D/Park/Import/Grass1_1_001
+MRUItem6=/Game/Assets/3D/Park/Stylized_Grass_002_basecolor
+MRUItem7=/Engine/Functions/Engine_MaterialFunctions02/Utility/BumpOffset_Advanced
+MRUItem8=/Game/Assets/3D/Park/parklow
+MRUItem9=/Game/Maps/Menu
+MRUItem10=/Game/Maps/LevelSelection
+MRUItem11=/Game/Blueprints/Main_Menu/LSA_RaccoonMenu
+MRUItem12=/Game/Blueprints/Main_Menu/NA_RaccoonMenu
+MRUItem13=/Game/Blueprints/Main_Menu/Animation_RaccoonMenu
+MRUItem14=/Game/Blueprints/Main_Menu/NewAnimationtest
+MRUItem15=/Game/Assets/3D/Char/raccoon_Skeleton
+MRUItem16=/Game/Assets/3D/Char/raccoon
+MRUItem17=/Game/Blueprints/Main_Menu/test
+MRUItem18=/Game/Blueprints/Main_Menu/AB_RaccoonMenu
+MRUItem19=/Game/Blueprints/Main_Menu/LSA_Raccoon
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -929,6 +928,60 @@ CameraActor.Replication=True
 CameraActor.Actor=True
 CameraActor.Physics=False
 CameraActor.AssetUserData=False
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionReroute.MaterialExpression=True
+MaterialExpressionFunctionOutput.MaterialExpressionFunctionOutput=True
+MaterialExpressionFunctionOutput.MaterialExpression=True
+MaterialExpressionBumpOffset.MaterialExpressionBumpOffset=True
+MaterialExpressionBumpOffset.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+MaterialMergeOptions.OutputMaterialSettings=True
+MaterialOptions.MeshSettings=True
+MaterialOptions.MaterialBakeSettings=True
+MaterialExpressionTextureObject.MaterialExpressionTextureBase=True
+MaterialExpressionTextureObject.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionConstant4Vector.MaterialExpressionConstant4Vector=True
+MaterialExpressionConstant4Vector.MaterialExpression=True
+MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
+MaterialExpressionConstant2Vector.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1051,8 +1104,16 @@ Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
 Info=
+MaterialExpressionConstant4Vector="\"Object.Constant\" "
+MaterialExpression=
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Assets/3D/Park/terrain2.terrain2;
+RecentlyPlaced=/Game/Assets/3D/Park/terrain.terrain;
+RecentlyPlaced=/Game/Assets/3D/Park/Grass.Grass;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Assets/3D/Park/parklow.parklow;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree2.Park_assets_Tree2;
 RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree1.Park_assets_Tree1;
@@ -1067,12 +1128,6 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_Bush_Mat.T_Bush_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Ground_Grass_Mat.T_Ground_Grass_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Bush_D.T_Bush_D;
 RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtmosphere_0
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Assets/3D/Park/Import/maya_test.maya_test;
-RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
-RecentlyPlaced=/Game/Blueprints/Main_Menu/Camera_MainMenu.Camera_MainMenu;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1094,10 +1149,15 @@ LastLogListing=FBXImport
 /Game/Assets/3D/Char/raccoon.raccoon=0
 /Game/Blueprints/Main_Menu/NA_RaccoonMenu.NA_RaccoonMenu=0
 /Game/Maps/Park.Park:PersistentLevel.Park=1
+/Game/Assets/3D/Park/Import/Grass1_1_001.Grass1_1_001=0
+/Game/Maps/Park.Park:PersistentLevel.WorldSettings=1
+/Engine/Functions/Engine_MaterialFunctions02/Utility/BumpOffset_Advanced.BumpOffset_advanced=0
+/Game/Assets/3D/Park/Grass.Grass=0
+/Game/Assets/3D/Park/Stylized_Grass_002_basecolor.Stylized_Grass_002_basecolor=0
 
 [RootWindow]
-ScreenPosition=X=109.600 Y=396.800
-WindowSize=X=1293.600 Y=733.600
+ScreenPosition=X=113.600 Y=57.600
+WindowSize=X=1300.000 Y=740.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1118,7 +1178,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Photoshop/Logo.png
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Blender/terrain2.fbx
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -1964,10 +2024,15 @@ AnimationEditor.TimeStamp=2022.03.06-03.40.04
 AnimationEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2022.03.06-03.40.09
 ExternalImagePicker.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2022.03.06-03.40.18
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [DetailCategoriesAdvanced]
-Texture2D.Compression=False
-Texture2D.Texture=False
+Texture2D.Compression=True
+Texture2D.Texture=True
+StaticMeshActor.Materials=True
+StaticMeshActor.StaticMesh=False
+PreviewMaterial.Material=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2186,8 +2251,9 @@ bHideUnrelatedNodes=False
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,
-SceneComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+SceneComponent=
 CameraActor=SkeletalMeshActor.Physics.ConstraintsGroup,
+Actor=SkeletalMeshActor.Physics.ConstraintsGroup,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2200,4 +2266,81 @@ HardwareTargetingSettings=True
 EditorProjectAppearanceSettings=True
 BlueprintEditorProjectSettings=True
 WindowsTargetSettings=True
+AssetManagerSettings=True
+AssetToolsSettings=True
+AISystem=True
+InputSettings=True
+LevelEditor2DSettings=True
+LevelSequenceEditorSettings=True
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+bShowGrid=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24.000000
+Property=0.500000
+Value=1.000000
+
+[StatsViewer]
+DisplayedStatsPageName=PrimitiveStats
 
