Changing game instance

--- a/Raccoozle/Config/DefaultEngine.ini
+++ b/Raccoozle/Config/DefaultEngine.ini
@@ -8,8 +8,9 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameModeRaccoon.BP_GameModeRaccoon_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Blueprints/GameInstanceRaccoon.GameInstanceRaccoon_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
