Update to raccoon animation

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/Park
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -205,33 +205,35 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/Alley
+LastLevel=/Game/Maps/Menu
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/3D/Park/Terrain.Terrain
+OpenAssetsAtExit=/Game/Assets/3D/Char/raccoonWithAnimations.raccoonWithAnimations
+OpenAssetsAtExit=/Game/Blueprints/BS_Raccoon.BS_Raccoon
+OpenAssetsAtExit=/Game/Blueprints/Animation_Raccoon.Animation_Raccoon
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/3D/Park/Terrain
-MRUItem1=/Game/Maps/Alley
-MRUItem2=/Game/Maps/Park
-MRUItem3=/Game/Maps/TrashPlace
-MRUItem4=/Game/Maps/Hospital
-MRUItem5=/Game/Maps/School
-MRUItem6=/Game/Maps/Menu
-MRUItem7=/Game/Maps/LevelSelection
-MRUItem8=/Game/Assets/3D/Alley/rpgpp_lt_mat_a_2
-MRUItem9=/Game/Assets/3D/Park/Material_002
-MRUItem10=/Game/Assets/3D/Alley/rpgpp_lt_mat_a
-MRUItem11=/Game/Blueprints/Alleys/LSA_LightFail
-MRUItem12=/Game/Assets/3D/Park/Other/rpgpp_lt_mat_a
-MRUItem13=/Game/Assets/3D/Park/Other/Rock
-MRUItem14=/Game/Blueprints/Raccoon
-MRUItem15=/Game/Assets/3D/Char/raccoon
-MRUItem16=/Game/Blueprints/BendSpace_Raccoon
-MRUItem17=/Game/Blueprints/Animation_Raccoon
-MRUItem18=/Game/Blueprints/BP_GameInstanceRaccoon
-MRUItem19=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem0=/Game/Blueprints/BS_Raccoon
+MRUItem1=/Game/Blueprints/Main_Menu/NA_RaccoonMenu
+MRUItem2=/Game/Blueprints/Animation_Raccoon
+MRUItem3=/Game/Assets/3D/Char/raccoonWithAnimations
+MRUItem4=/Game/Assets/3D/Char/raccoon
+MRUItem5=/Game/Assets/3D/Park/Terrain
+MRUItem6=/Game/Maps/Alley
+MRUItem7=/Game/Maps/Park
+MRUItem8=/Game/Maps/TrashPlace
+MRUItem9=/Game/Maps/Hospital
+MRUItem10=/Game/Maps/School
+MRUItem11=/Game/Maps/Menu
+MRUItem12=/Game/Maps/LevelSelection
+MRUItem13=/Game/Assets/3D/Alley/rpgpp_lt_mat_a_2
+MRUItem14=/Game/Assets/3D/Park/Material_002
+MRUItem15=/Game/Assets/3D/Alley/rpgpp_lt_mat_a
+MRUItem16=/Game/Blueprints/Alleys/LSA_LightFail
+MRUItem17=/Game/Assets/3D/Park/Other/rpgpp_lt_mat_a
+MRUItem18=/Game/Assets/3D/Park/Other/Rock
+MRUItem19=/Game/Blueprints/Raccoon
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1351,7 +1353,7 @@ RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetDet
 RecentlyPlaced=/Game/Blueprints/Raccoon.Raccoon;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -1386,8 +1388,8 @@ LastLogListing=LightingResults
 /Game/Assets/3D/Alley/rpgpp_lt_mat_a_2.rpgpp_lt_mat_a_2=0
 
 [RootWindow]
-ScreenPosition=X=272.800 Y=-19.200
-WindowSize=X=1309.600 Y=749.600
+ScreenPosition=X=108.000 Y=52.000
+WindowSize=X=1311.200 Y=751.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1408,7 +1410,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/rpgpp_lt_models/buildings/rpgpp_lt_building_01.fbx
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Blender/raccoonAnimationFix2.fbx
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -2384,7 +2386,7 @@ bConvertSceneUnit=False
 
 [FBX_Import_UI_Option_FbxAnimSequenceImportData]
 bImportMeshesInBoneHierarchy=True
-AnimationLength=FBXALIT_AnimatedKey
+AnimationLength=FBXALIT_ExportedTime
 FrameImportRange=(Min=0,Max=0)
 bUseDefaultSampleRate=False
 CustomSampleRate=0
