Grabbing function added
Player can now grab objects

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,9 +131,9 @@ CurrentPosGridSize=0
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/Maps/Alley
-MRUItem1=/Game/Maps/Menu
-MRUItem2=/Game/Maps/Park
+MRUItem0=/Game/Maps/Park
+MRUItem1=/Game/Maps/Alley
+MRUItem2=/Game/Maps/Menu
 MRUItem3=/Game/Maps/TrashPlace
 MRUItem4=/Game/Maps/Hospital
 MRUItem5=/Game/Maps/School
@@ -178,7 +178,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Collectibles
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -208,32 +208,35 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/Alley
+LastLevel=/Game/Maps/Park
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Collectibles/BP_Object1.BP_Object1
+OpenAssetsAtExit=/Game/Blueprints/BP_GameModeRaccoon.BP_GameModeRaccoon
+OpenAssetsAtExit=/Game/Blueprints/Collectibles/BP_CheckToAdvance.BP_CheckToAdvance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Alley
-MRUItem1=/Game/Maps/Menu
-MRUItem2=/Game/Blueprints/BP_GameInstanceRaccoon
-MRUItem3=/Game/Blueprints/Raccoon
-MRUItem4=/Game/Blueprints/BP_GameModeRaccoon
-MRUItem5=/Game/Blueprints/Animation_Raccoon
-MRUItem6=/Game/Blueprints/BS_Raccoon
-MRUItem7=/Game/Blueprints/BS_IdleToGrab
-MRUItem8=/Game/Assets/3D/Char/AnimationTest/Grabbing
-MRUItem9=/Game/Assets/3D/Char/AnimationTest/Walking
-MRUItem10=/Game/Assets/AnimationsTest/another/zer/raccoon3rd_Anim_Armature_Grabbing
-MRUItem11=/Game/Maps/Park
-MRUItem12=/Game/Maps/TrashPlace
-MRUItem13=/Game/Maps/Hospital
-MRUItem14=/Game/Maps/School
-MRUItem15=/Game/Maps/Street
-MRUItem16=/Game/Assets/3D/Park/Metal_Black
-MRUItem17=/Game/Assets/3D/Park/Garbage_Cans
-MRUItem18=/Game/Assets/3D/Park/Trash_Container
-MRUItem19=/Game/Maps/LevelSelection
+MRUItem0=/Game/Blueprints/Collectibles/BP_CheckToAdvance
+MRUItem1=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem2=/Game/Blueprints/Collectibles/BP_Object1
+MRUItem3=/Game/Blueprints/Collectibles/BP_Objects
+MRUItem4=/Game/Maps/Park
+MRUItem5=/Game/Maps/Alley
+MRUItem6=/Game/Maps/Menu
+MRUItem7=/Game/Blueprints/BP_GameInstanceRaccoon
+MRUItem8=/Game/Blueprints/Raccoon
+MRUItem9=/Game/Blueprints/Animation_Raccoon
+MRUItem10=/Game/Blueprints/BS_Raccoon
+MRUItem11=/Game/Blueprints/BS_IdleToGrab
+MRUItem12=/Game/Assets/3D/Char/AnimationTest/Grabbing
+MRUItem13=/Game/Assets/3D/Char/AnimationTest/Walking
+MRUItem14=/Game/Assets/AnimationsTest/another/zer/raccoon3rd_Anim_Armature_Grabbing
+MRUItem15=/Game/Maps/TrashPlace
+MRUItem16=/Game/Maps/Hospital
+MRUItem17=/Game/Maps/School
+MRUItem18=/Game/Maps/Street
+MRUItem19=/Game/Assets/3D/Park/Metal_Black
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1251,6 +1254,44 @@ LandscapeComponent.Cooking=True
 AnimGraphNode_TransitionResult.Result=True
 K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
+BP_Objects_C.Tick=True
+BP_Objects_C.Replication=True
+BP_Objects_C.Rendering=True
+BP_Objects_C.Actor=True
+BP_Objects_C.Collision=True
+BP_Objects_C.Input=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+BP_Object1_C.Tick=True
+BP_Object1_C.Replication=True
+BP_Object1_C.Rendering=True
+BP_Object1_C.Actor=True
+BP_Object1_C.Collision=True
+BP_Object1_C.Input=True
+BP_GameModeRaccoon_C.Default=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+BP_CheckToAdvance_C.Tick=True
+BP_CheckToAdvance_C.Replication=True
+BP_CheckToAdvance_C.Rendering=True
+BP_CheckToAdvance_C.Actor=True
+BP_CheckToAdvance_C.Collision=True
+BP_CheckToAdvance_C.Input=True
+BP_CheckToAdvance_C.TransformCommon=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1355,7 +1396,7 @@ FrameNumberDisplayFormat=Seconds
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Reference Transform.ReferenceScale\" "
+Object=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1389,6 +1430,9 @@ LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Collectibles/BP_CheckToAdvance.BP_CheckToAdvance;
+RecentlyPlaced=/Game/Blueprints/Collectibles/BP_Objects.BP_Objects;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Assets/3D/Alley/rpgpp_lt_mat_a_2.rpgpp_lt_mat_a_2;
 RecentlyPlaced=/Game/Assets/3D/Alley/rpgpp_lt_mat_a.rpgpp_lt_mat_a;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1406,9 +1450,6 @@ RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_
 RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_Park_08_001.uploads_files_3531329_street+asset_Park_08_001;
 RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetFurniture_08_001.uploads_files_3531329_street+asset_StreetFurniture_08_001;
 RecentlyPlaced=/Game/Assets/3D/Alley/rpgpp_lt_building_01.rpgpp_lt_building_01;
-RecentlyPlaced=/Game/Assets/3D/Alley/rpgpp_lt_building_02.rpgpp_lt_building_02;
-RecentlyPlaced=/Game/Assets/3D/Alley/rpgpp_lt_building_03.rpgpp_lt_building_03;
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Grass2.Park_assets_Grass2;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1463,10 +1504,11 @@ LastLogListing=FBXImport
 /Game/Assets/3D/Park/Metal_Black.Metal_Black=0
 /Game/Maps/Alley.Alley:PersistentLevel.Alley=1
 /Game/Assets/3D/Char/AnimationTest/Grabbing.Grabbing=0
+/Game/Blueprints/Collectibles/BP_Objects.BP_Objects=0
 
 [RootWindow]
 ScreenPosition=X=107.200 Y=51.200
-WindowSize=X=1320.800 Y=760.800
+WindowSize=X=1322.400 Y=762.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2652,6 +2694,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LandscapeGizmoRenderComponent=
 LandscapeComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 LandscapeGizmoActiveActor=SkeletalMeshActor.Physics.ConstraintsGroup,
+BP_CheckToAdvance_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
