School level update

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,14 +131,14 @@ CurrentPosGridSize=0
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/Maps/Park
+MRUItem0=/Game/Maps/School
 MRUItem1=/Game/Maps/Alley
-MRUItem2=/Game/Maps/Menu
-MRUItem3=/Game/Maps/TrashPlace
-MRUItem4=/Game/Maps/Hospital
-MRUItem5=/Game/Maps/School
-MRUItem6=/Game/Maps/Street
-MRUItem7=/Game/Maps/LevelSelection
+MRUItem2=/Game/Maps/LevelSelection
+MRUItem3=/Game/Maps/Park
+MRUItem4=/Game/Maps/Menu
+MRUItem5=/Game/Maps/TrashPlace
+MRUItem6=/Game/Maps/Hospital
+MRUItem7=/Game/Maps/Street
 MRUItem8=/Game/ThirdPersonBP/Menu
 MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
@@ -178,7 +178,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Collectibles
+ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/City
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -208,35 +208,32 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/Park
+LastLevel=/Game/Maps/School
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Collectibles/BP_Object1.BP_Object1
-OpenAssetsAtExit=/Game/Blueprints/BP_GameModeRaccoon.BP_GameModeRaccoon
-OpenAssetsAtExit=/Game/Blueprints/Collectibles/BP_CheckToAdvance.BP_CheckToAdvance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Collectibles/BP_CheckToAdvance
-MRUItem1=/Game/Blueprints/BP_GameModeRaccoon
-MRUItem2=/Game/Blueprints/Collectibles/BP_Object1
-MRUItem3=/Game/Blueprints/Collectibles/BP_Objects
-MRUItem4=/Game/Maps/Park
-MRUItem5=/Game/Maps/Alley
-MRUItem6=/Game/Maps/Menu
-MRUItem7=/Game/Blueprints/BP_GameInstanceRaccoon
-MRUItem8=/Game/Blueprints/Raccoon
-MRUItem9=/Game/Blueprints/Animation_Raccoon
-MRUItem10=/Game/Blueprints/BS_Raccoon
-MRUItem11=/Game/Blueprints/BS_IdleToGrab
-MRUItem12=/Game/Assets/3D/Char/AnimationTest/Grabbing
-MRUItem13=/Game/Assets/3D/Char/AnimationTest/Walking
-MRUItem14=/Game/Assets/AnimationsTest/another/zer/raccoon3rd_Anim_Armature_Grabbing
-MRUItem15=/Game/Maps/TrashPlace
-MRUItem16=/Game/Maps/Hospital
-MRUItem17=/Game/Maps/School
-MRUItem18=/Game/Maps/Street
-MRUItem19=/Game/Assets/3D/Park/Metal_Black
+MRUItem0=/Game/Assets/3D/City/lambert5
+MRUItem1=/Game/Assets/3D/City/uploads_files_2149069_school
+MRUItem2=/Game/Maps/School
+MRUItem3=/Game/Maps/Alley
+MRUItem4=/Game/Maps/LevelSelection
+MRUItem5=/Game/Maps/Park
+MRUItem6=/Game/Blueprints/Collectibles/BP_CheckToAdvance
+MRUItem7=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem8=/Game/Blueprints/Collectibles/BP_Object1
+MRUItem9=/Game/Blueprints/Collectibles/BP_Objects
+MRUItem10=/Game/Maps/Menu
+MRUItem11=/Game/Blueprints/BP_GameInstanceRaccoon
+MRUItem12=/Game/Blueprints/Raccoon
+MRUItem13=/Game/Blueprints/Animation_Raccoon
+MRUItem14=/Game/Blueprints/BS_Raccoon
+MRUItem15=/Game/Blueprints/BS_IdleToGrab
+MRUItem16=/Game/Assets/3D/Char/AnimationTest/Grabbing
+MRUItem17=/Game/Assets/3D/Char/AnimationTest/Walking
+MRUItem18=/Game/Assets/AnimationsTest/another/zer/raccoon3rd_Anim_Armature_Grabbing
+MRUItem19=/Game/Maps/TrashPlace
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1410,7 +1407,7 @@ VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" 
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 SpotLight=
-Light="\"Object.Light.DirectionalLightComponent.Object.Light.LightColor\" "
+Light=
 Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
@@ -1419,7 +1416,7 @@ MaterialExpressionConstant4Vector="\"Object.Constant\" "
 MaterialExpression=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-DirectionalLight="\"Object.Light.DirectionalLightComponent.Object.Light.LightColor\" "
+DirectionalLight=
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
@@ -1430,12 +1427,14 @@ LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/3D/City/uploads_files_2149069_school.uploads_files_2149069_school;
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/Assets/3D/City/School.School;
 RecentlyPlaced=/Game/Blueprints/Collectibles/BP_CheckToAdvance.BP_CheckToAdvance;
 RecentlyPlaced=/Game/Blueprints/Collectibles/BP_Objects.BP_Objects;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Assets/3D/Alley/rpgpp_lt_mat_a_2.rpgpp_lt_mat_a_2;
 RecentlyPlaced=/Game/Assets/3D/Alley/rpgpp_lt_mat_a.rpgpp_lt_mat_a;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Mushroom1.Park_assets_Mushroom1;
 RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Mushroom2.Park_assets_Mushroom2;
 RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Stump1.Park_assets_Stump1;
@@ -1448,8 +1447,6 @@ RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetDet
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_Park_08_001.uploads_files_3531329_street+asset_Park_08_001;
-RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetFurniture_08_001.uploads_files_3531329_street+asset_StreetFurniture_08_001;
-RecentlyPlaced=/Game/Assets/3D/Alley/rpgpp_lt_building_01.rpgpp_lt_building_01;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1505,10 +1502,13 @@ LastLogListing=FBXImport
 /Game/Maps/Alley.Alley:PersistentLevel.Alley=1
 /Game/Assets/3D/Char/AnimationTest/Grabbing.Grabbing=0
 /Game/Blueprints/Collectibles/BP_Objects.BP_Objects=0
+/Game/Blueprints/Collectibles/BP_CheckToAdvance.BP_CheckToAdvance=0
+/Game/Blueprints/Collectibles/BP_Object1.BP_Object1=0
+/Game/Assets/3D/City/lambert5.lambert5=1
 
 [RootWindow]
 ScreenPosition=X=107.200 Y=51.200
-WindowSize=X=1322.400 Y=762.400
+WindowSize=X=1324.000 Y=764.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1529,7 +1529,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Blender/raccoon3rd.fbx
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/uploads_files_2149069_school.fbx
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -2472,7 +2472,7 @@ bComputeWeightedNormals=True
 bReorderMaterialToFbxOrder=True
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
 ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
-ImportUniformScale=1.000000
+ImportUniformScale=200.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
@@ -2717,7 +2717,6 @@ LevelSequenceEditorSettings=True
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
@@ -2802,7 +2801,7 @@ RampSideFalloff=0.400000
 bCombinedLayersOperation=True
 SmoothFilterKernelSize=4
 MirrorOp=0
-NewLandscapeMaterialName=/Game/Assets/3D/Park/Terrain.Terrain
+NewLandscapeMaterialName=/Engine/EditorMeshes/ColorCalibrator/M_GreyBall.M_GreyBall
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
